update for tag and modify comment response data
